--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -90,7 +90,8 @@ jobs:
           sudo apt-get install -y \
             libgtk-3-dev \
             libgstreamer1.0-dev \
-            libgstreamer-plugins-base1.0-dev
+            libgstreamer-plugins-base1.0-dev \
+            libunwind-dev
 
       - uses: astral-sh/setup-uv@v4
         with:
