Fix build: add pillow for PNG→ICO/ICNS icon conversion
PyInstaller needs Pillow to convert PNG icons to native formats
(.ico on Windows, .icns on macOS).

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync
-          uv pip install pyinstaller
+          uv pip install pyinstaller pillow
 
       - name: Build executable
         run: uv run flet pack app_new.py --icon icon-256.png --name WeatherTrader
@@ -57,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync
-          uv pip install pyinstaller
+          uv pip install pyinstaller pillow
 
       - name: Build app bundle
         run: |
@@ -104,7 +104,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync
-          uv pip install pyinstaller
+          uv pip install pyinstaller pillow
 
       - name: Build executable
         run: uv run flet pack app_new.py --icon icon-256.png --name WeatherTrader
