--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,26 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Atmospheric Science",
 ]
 dependencies = [
+    # Desktop UI
     "flet>=0.25",
     "flet-map>=0.80.5",
     "httpx>=0.28",
+    # Backend (weather-engine, embedded)
+    "openmeteo-requests>=1.3",
+    "requests-cache>=1.2",
+    "retry-requests>=2.0",
+    "pandas>=2.2",
+    "numpy>=2.0",
+    "scipy>=1.14",
+    "scikit-learn>=1.5",
+    "statsmodels>=0.14",
+    "fastapi>=0.115",
+    "uvicorn[standard]>=0.32",
+    "duckdb>=1.1",
+    "pydantic>=2.9",
+    "pydantic-settings>=2.6",
+    "apscheduler>=3.10",
+    "jinja2>=3.1",
 ]
 
 [project.urls]
@@ -32,7 +49,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["weather_trader"]
+packages = ["weather_trader", "weather_engine"]
 
 [tool.flet]
 app = "app_new.py"
