--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -28,7 +28,47 @@ jobs:
           uv pip install pyinstaller pillow
 
       - name: Build executable
-        run: uv run flet pack app_new.py --icon icon-256.png --name WeatherTrader
+        run: >
+          uv run flet pack app_new.py --icon icon-256.png --name WeatherTrader
+          --hidden-import weather_engine
+          --hidden-import weather_engine.main
+          --hidden-import weather_engine.config
+          --hidden-import weather_engine.db
+          --hidden-import weather_engine.scheduler
+          --hidden-import weather_engine.api.routes_health
+          --hidden-import weather_engine.api.routes_forecast
+          --hidden-import weather_engine.api.routes_market
+          --hidden-import weather_engine.api.routes_analysis
+          --hidden-import weather_engine.api.routes_ai
+          --hidden-import weather_engine.api.error_handlers
+          --hidden-import weather_engine.collectors.forecast
+          --hidden-import weather_engine.collectors.ensemble
+          --hidden-import weather_engine.collectors.base
+          --hidden-import weather_engine.collectors.deterministic
+          --hidden-import weather_engine.collectors.air_quality
+          --hidden-import weather_engine.collectors.climate
+          --hidden-import weather_engine.collectors.flood
+          --hidden-import weather_engine.collectors.historical
+          --hidden-import weather_engine.collectors.marine
+          --hidden-import weather_engine.collectors.seasonal
+          --hidden-import weather_engine.collectors.teleconnection
+          --hidden-import weather_engine.analysis
+          --hidden-import weather_engine.market_bridge
+          --hidden-import weather_engine.models
+          --hidden-import weather_engine.notifications
+          --hidden-import weather_engine.resilience
+          --hidden-import weather_engine.backtesting
+          --hidden-import uvicorn
+          --hidden-import uvicorn.logging
+          --hidden-import uvicorn.loops
+          --hidden-import uvicorn.loops.auto
+          --hidden-import uvicorn.protocols
+          --hidden-import uvicorn.protocols.http
+          --hidden-import uvicorn.protocols.http.auto
+          --hidden-import uvicorn.protocols.websockets
+          --hidden-import uvicorn.protocols.websockets.auto
+          --hidden-import uvicorn.lifespan
+          --hidden-import uvicorn.lifespan.on
 
       - name: Rename artifact
         run: |
@@ -60,11 +100,50 @@ jobs:
           uv pip install pyinstaller pillow
 
       - name: Build app bundle
-        run: |
-          uv run flet pack app_new.py \
-            --icon icon-256.png \
-            --name WeatherTrader \
-            --bundle-id com.github.mengo1234.weathertrader
+        run: >
+          uv run flet pack app_new.py
+          --icon icon-256.png
+          --name WeatherTrader
+          --bundle-id com.github.mengo1234.weathertrader
+          --hidden-import weather_engine
+          --hidden-import weather_engine.main
+          --hidden-import weather_engine.config
+          --hidden-import weather_engine.db
+          --hidden-import weather_engine.scheduler
+          --hidden-import weather_engine.api.routes_health
+          --hidden-import weather_engine.api.routes_forecast
+          --hidden-import weather_engine.api.routes_market
+          --hidden-import weather_engine.api.routes_analysis
+          --hidden-import weather_engine.api.routes_ai
+          --hidden-import weather_engine.api.error_handlers
+          --hidden-import weather_engine.collectors.forecast
+          --hidden-import weather_engine.collectors.ensemble
+          --hidden-import weather_engine.collectors.base
+          --hidden-import weather_engine.collectors.deterministic
+          --hidden-import weather_engine.collectors.air_quality
+          --hidden-import weather_engine.collectors.climate
+          --hidden-import weather_engine.collectors.flood
+          --hidden-import weather_engine.collectors.historical
+          --hidden-import weather_engine.collectors.marine
+          --hidden-import weather_engine.collectors.seasonal
+          --hidden-import weather_engine.collectors.teleconnection
+          --hidden-import weather_engine.analysis
+          --hidden-import weather_engine.market_bridge
+          --hidden-import weather_engine.models
+          --hidden-import weather_engine.notifications
+          --hidden-import weather_engine.resilience
+          --hidden-import weather_engine.backtesting
+          --hidden-import uvicorn
+          --hidden-import uvicorn.logging
+          --hidden-import uvicorn.loops
+          --hidden-import uvicorn.loops.auto
+          --hidden-import uvicorn.protocols
+          --hidden-import uvicorn.protocols.http
+          --hidden-import uvicorn.protocols.http.auto
+          --hidden-import uvicorn.protocols.websockets
+          --hidden-import uvicorn.protocols.websockets.auto
+          --hidden-import uvicorn.lifespan
+          --hidden-import uvicorn.lifespan.on
 
       - name: Create DMG
         run: |
@@ -107,7 +186,47 @@ jobs:
           uv pip install pyinstaller pillow
 
       - name: Build executable
-        run: uv run flet pack app_new.py --icon icon-256.png --name WeatherTrader
+        run: >
+          uv run flet pack app_new.py --icon icon-256.png --name WeatherTrader
+          --hidden-import weather_engine
+          --hidden-import weather_engine.main
+          --hidden-import weather_engine.config
+          --hidden-import weather_engine.db
+          --hidden-import weather_engine.scheduler
+          --hidden-import weather_engine.api.routes_health
+          --hidden-import weather_engine.api.routes_forecast
+          --hidden-import weather_engine.api.routes_market
+          --hidden-import weather_engine.api.routes_analysis
+          --hidden-import weather_engine.api.routes_ai
+          --hidden-import weather_engine.api.error_handlers
+          --hidden-import weather_engine.collectors.forecast
+          --hidden-import weather_engine.collectors.ensemble
+          --hidden-import weather_engine.collectors.base
+          --hidden-import weather_engine.collectors.deterministic
+          --hidden-import weather_engine.collectors.air_quality
+          --hidden-import weather_engine.collectors.climate
+          --hidden-import weather_engine.collectors.flood
+          --hidden-import weather_engine.collectors.historical
+          --hidden-import weather_engine.collectors.marine
+          --hidden-import weather_engine.collectors.seasonal
+          --hidden-import weather_engine.collectors.teleconnection
+          --hidden-import weather_engine.analysis
+          --hidden-import weather_engine.market_bridge
+          --hidden-import weather_engine.models
+          --hidden-import weather_engine.notifications
+          --hidden-import weather_engine.resilience
+          --hidden-import weather_engine.backtesting
+          --hidden-import uvicorn
+          --hidden-import uvicorn.logging
+          --hidden-import uvicorn.loops
+          --hidden-import uvicorn.loops.auto
+          --hidden-import uvicorn.protocols
+          --hidden-import uvicorn.protocols.http
+          --hidden-import uvicorn.protocols.http.auto
+          --hidden-import uvicorn.protocols.websockets
+          --hidden-import uvicorn.protocols.websockets.auto
+          --hidden-import uvicorn.lifespan
+          --hidden-import uvicorn.lifespan.on
 
       - name: Rename artifact
         run: |
